--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,163 @@
 }
 
 html {
-    background: rgb(34, 34, 34);
+    background: #25242A;
 }
 
 h1 {
     margin-left: 3vh;
-
+    margin-top: 1vh;
     color: white;
-    font-family: 'Playfair Display', serif;
-    font-size: 60px;
-    text-shadow: rgb(0, 0, 0) 5px 4px 7px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 40px;
+    font-weight: 900;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.options{
+    justify-content: flex-end;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    font-weight: 600;
+    margin-right: 3vh;
+    margin-top: 2vh;
+}
+
+#addbook {
+    padding-right: 20px;
+}
+
+#addbook:hover {
+    cursor: pointer;
+    text-shadow: 0px 0px 10px rgb(255, 255, 255);
+}
+
+#signin {
+    padding: 9px 25px;
+    background-color: rgba(0,136,169,1);
+    border: none;
+    border-radius: 50px;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700px;
+}
+
+#signin:hover {
+    box-shadow: 0px 0px 10px 1px rgba(0,136,169,1);
+    cursor: pointer;
+}
+
+.new-book {
+    border: 1px solid black;
+    height: 400px;
+    width: 280px;
+    margin-left: 3vh;
+    margin-top: 3vh;
+    display: flex;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    position: relative;
+    background: rgb(37,36,42);
+    background: linear-gradient(18deg, rgba(37,36,42,1) 0%, rgba(63,64,64,1) 50%, rgba(37,36,42,1) 100%);
+}
+
+#book-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#popup-form {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.486);
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.form-content {
+    width: 400px;
+    background-color: #25242A;
+    height: 400px;
+    text-align: center;
+    position: relative;
+    box-shadow: 0px 0px 10px 1px rgba(0,136,169,1);
+}
+
+input {
+    height: 20px;
+    width: 300px;
+}
+
+img {
+    margin-top: 2vh;
+}
+
+p {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 3vh;
+    margin-bottom: 3px;;
+}
+
+.add-to-library:hover {
+    cursor: pointer;
+    text-shadow: 0px 0px 10px rgb(255, 255, 255);
+}
+
+.close {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    position: absolute;
+    top: 0;
+    right: 5px;
+    transform: rotate(45deg);
+}
+
+.close:hover {
+    cursor: pointer;
+}
+
+.book-headers {
+    text-align: center;
+    font-size: 12px;
+    color: #a5d7f8;
+    position: absolute;
+    bottom: 3vh;
+}
+
+.title {
+    color: white;
+    font-size: 30px;
+    margin: 10vh 3vh 0 3vh;
+    text-align: center;
+}
+
+.delete-book {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    position: absolute;
+    top: 0;
+    right: 5px;
+    transform: rotate(45deg);
+}
+
+.delete-book:hover {
+    cursor: pointer;
+}
+
+footer {
+    position: fixed;
+    bottom: 0px;
+    left: 50%;
 }
