--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ header {
     text-align: center;
     position: relative;
     box-shadow: 0px 0px 10px 1px rgba(0,136,169,1);
+    border-radius: 10px;
 }
 
 input {
@@ -152,6 +153,68 @@ p {
     top: 0;
     right: 5px;
     transform: rotate(45deg);
+}
+
+.delete-book:hover {
+    cursor: pointer;
+}
+
+footer {
+    position: fixed;
+    bottom: 0px;
+    left: 50%;
+}
+
+.no-books-added {
+    color: rgba(255, 255, 255, 0.068);
+    font-size: 150px;
+    font-family: 'Montserrat', sans-serif;
+    position: absolute;
+    top: 20vh;
+    text-align: center;
+}
+
+.read-status {
+    position: absolute;
+    top: 5px;
+    left: -90px;
+}
+
+.read {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    padding: 3px 5px;
+    background-color: rgb(21, 255, 0);
+    border: none;
+    border-radius: 50px;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 10px;
+    font-weight: 700px;
+}
+
+.read {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    padding: 3px 5px;
+    background-color: rgb(255, 0, 0);
+    border: none;
+    border-radius: 50px;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 10px;
+    font-weight: 700px;
+}
+
+.read:active,
+.read.active {
+    background-color: rgb(21, 255, 0);
+}
+
+.read:hover {
+    cursor: pointer;
 }
 
 .delete-book:hover {
